Clarify Java runtime requirement in uxopian-ai documentation
The docs stated "Java 21" everywhere as if it were a pinned version, while
21 is only the bytecode target and the official container images ship a
Temurin 25 runtime. Nothing mentioned the embedded JRE, and the bare
archive start commands omitted --enable-native-access=ALL-UNNAMED, which
the image ENTRYPOINT applies and which Java 24+ needs.

- requirements.md: state 21 as a minimum and add a Java runtime section
  contrasting container and bare archive deployments
- java.md: recommend Java 25 and add the native access flag to both
  start commands
- docker.md: note that the images embed their own runtime
- custom_tools.md, custom_llm_provider.md: distinguish the build JDK from
  the required bytecode target

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>